# simple_hri

./: .gitignore  README.md  package.xml  requirements.txt  setup.cfg  setup.py  thirdparty.repos
audio_send_interfaces/: CMakeLists.txt  package.xml
launch/: simple_hri.launch.py
simple_hri/: README.md  package.xml  requirements.txt  setup.cfg  setup.py  stt_service.py  tts_service.py
simple_hri/launch/: free_simple_hri.launch.py  local_simple_hri.launch.py  simple_hri.launch.py
simple_hri/params/: basic_prompt_es.txt  yesno_prompt_es.txt
simple_hri/simple_hri/: audio_file_player.py  audio_service.py  extract_service.py  extract_service_hugg.py  extract_service_local.py  stt_service_local.py  test_extract.py  test_services.py  tts_service.py  tts_service_local.py  yesno_service_local.py  yesono_service.py
simple_hri_interfaces/: CMakeLists.txt  package.xml
simple_hri_interfaces/srv/: Extract.srv  Speech.srv
