<?xml version="1.0"?>
<package format="3">
  <name>audio_send_interfaces</name>
  <version>0.0.1</version>
  <description>Interfaces (srv) para simple_hri</description>

  <maintainer email="tu@email.com">Tu Nombre</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>


</package>
